# xg-edge

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: PRODUCT_REQUIREMENTS_RU.md  data.md  high-totals-audit.md  hypotheses.md  metrics-registry.md  model-governance.md
reports/: bets.csv  high_totals_audit.json  hypotheses.csv  hypotheses.md  legacy_model_quarantine.json  live_predictions.json  market_anchor_audit.json  metrics.json  predictions.csv  statsbomb_open_catalog.json  summary.md  ucl_qualifying_predictions.csv  ucl_qualifying_predictions.json  world_cup_2026_fifa_fixtures_asof_2026-07-13.json  world_cup_2026_fifa_rankings_pre_tournament.json  world_cup_2026_semifinals.csv  world_cup_2026_semifinals.json
scripts/: audit_market_anchor.py  audit_score_and_high_totals.py  build_dataset.py  build_live_payload.py  capture_bookmaker_odds.py  capture_uefa_context.py  download_data.py  download_top5.py  fetch_current_fixtures.py  fetch_statsbomb_open.py  fetch_top5_fixtures.py  fetch_uefa_history.py  fetch_weather_context.py  predict_fixtures.py  predict_ucl_qualifying.py  predict_world_cup.py  run_hypotheses.py  run_monte_carlo.py  run_walkforward.py  settle_prospective_results.py  update_forecast_archive.py  update_model_registry.py  update_paper_trading.py
site/: .gitignore  README.md  package-lock.json  package.json
tests/: test_bookmaker_odds.py  test_capture_bookmaker_odds.py  test_context_capture.py  test_data_loaders.py  test_evaluation.py  test_features.py  test_forecast_archive_cli.py  test_markets.py  (+24 more)
(+71 files in other folders)
